--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ add_subdirectory(Week_2/Task_2_9)
 add_subdirectory(Week_2/Task_2_11)
 add_subdirectory(Week_2/Task_2_12)
 # add_subdirectory(Week_2/Task_2_13)
-# add_subdirectory(Week_2/Task_2_14)
+add_subdirectory(Week_2/Task_2_14)
 add_subdirectory(Week_2/Task_2_15)
 add_subdirectory(Week_2/Task_2_16)
 add_subdirectory(Week_2/Task_2_17)
